--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "passport-figma",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Figma passport strategy for Node.js authentication",
   "main": "./lib",
   "scripts": {
-    "test": "jest ./tests"
+    "test": "jest ./tests",
+    "build": "babel src --out-dir lib",
+    "prepublish": "npm run build"
   },
   "keywords": [
     "passport",
@@ -32,6 +34,9 @@
     "passport-oauth2": "^1.4.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-es2015": "^6.24.1",
     "jest": "^22.4.3"
   }
 }
