--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,9 @@
 {
     "presets": [
-        "es2015"
+        ["@babel/preset-env", {
+            "targets": {
+                "node": "current"
+            }
+        }]
     ],
-    "plugins": [
-        "add-module-exports"
-    ]
 }
