--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "passport-figma",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Figma passport strategy for Node.js authentication",
   "main": "./lib",
   "scripts": {
@@ -31,12 +31,12 @@
   },
   "license": "MIT",
   "dependencies": {
-    "passport-oauth2": "^1.4.0"
+    "passport-oauth2": "^1.5.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-es2015": "^6.24.1",
-    "jest": "^22.4.3"
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "jest": "^22.4.4"
   }
 }
