--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "passport-figma",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Figma passport strategy for Node.js authentication",
   "main": "./lib",
   "scripts": {
@@ -37,6 +37,11 @@
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
-    "jest": "^22.4.4"
+    "babel-plugin-add-module-exports": "^1.0.2",
+    "jest": "^24.8.0"
+  },
+  "jest": {
+    "verbose": true,
+    "testURL": "http://localhost/"
   }
 }
